--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,6 +8,9 @@ jobs:
   build:
     name: Generate tag
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Ensure the token has write permissions
+
     steps:
       - uses: actions/checkout@v3
         with:
